Update Airbnb NewYork project.ipynb

--- a/Airbnb NewYork project.ipynb
+++ b/Airbnb NewYork project.ipynb
@@ -209,7 +209,7 @@
    ],
    "source": [
     "# read dataset into a DataFrame\n",
-    "df = pd.read_csv('https://raw.githubusercontent.com/chuludata/AirbnbNewYorkOpenDataset/main/AB_NYC_2019.csv')\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/cindyuj/Python-project/main/Airbnb%20.csv')\n",
     "\n",
     "df.head()"
    ]
